# Pico_ePaper_73

./: CMakeLists.txt  README.md  main.c
examples/: CMakeLists.txt  EPD_7in3f_test.c  EPD_Test.h  ImageData.c  ImageData.h  run_File.c  run_File.h
extra_uf2/: ReadMe.txt
extra_uf2/Mode 1/: rtc_12_hours.uf2  rtc_1_hours.uf2  rtc_24_hours.uf2  rtc_30_minutes.uf2  rtc_4_hours.uf2  rtc_6_hours.uf2  rtc_8_hours.uf2
extra_uf2/Mode 2/: rtc_10_hours.uf2  rtc_12_hours.uf2  rtc_15_minutes.uf2  rtc_1_hours.uf2  rtc_24_hours.uf2  rtc_2_hours.uf2  rtc_30_minutes.uf2  rtc_4_hours.uf2  rtc_6_hours.uf2  rtc_8_hours.uf2
extra_uf2/Mode 3/: rtc_10_hours.uf2  rtc_11_hours.uf2  rtc_12_hours.uf2  rtc_13_hours.uf2  rtc_15_minutes.uf2  rtc_18_hours.uf2  rtc_1_hour.uf2  rtc_23_hours.uf2  rtc_24_hours.uf2  rtc_25_hours.uf2  rtc_2_days.uf2  rtc_2_hours.uf2  rtc_30_minutes.uf2  rtc_4_days.uf2  rtc_4_hours.uf2  rtc_6_hours.uf2  rtc_7_days.uf2  rtc_8_hours.uf2
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  hw_config.c
lib/FatFs_SPI/: CMakeLists.txt
lib/FatFs_SPI/ff14a/source/: ffconf.h
lib/FatFs_SPI/include/: f_util.h  ff_stdio.h  my_debug.h  rtc.h
lib/FatFs_SPI/sd_driver/: sd_card.c  sd_spi.c  spi.h
lib/FatFs_SPI/src/: f_util.c  ff_stdio.c  my_debug.c  rtc.c
lib/Fonts/: CMakeLists.txt  font24CN.c
lib/GUI/: CMakeLists.txt  GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/RTC/: CMakeLists.txt  waveshare_PCF85063.c  waveshare_PCF85063.h
lib/e-Paper/: CMakeLists.txt  EPD_7in3f.c  EPD_7in3f.h
lib/led/: CMakeLists.txt  led.c  led.h
